--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+#canvas {
+  max-width: 100%;
 }
 
 #controls {
@@ -43,4 +49,5 @@ html {
   font-size: 1em;
   line-height: 1.2;
   width: 450px;
+  max-width: 100%;
 }
